# nemotron_finetuning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: .nfs00000000139f0c260000071e  .nfs00000000139f0c2900000720
configs/: base.yaml  inference_kaggle.yaml
configs/experiments/: lora_r16.yaml  lora_r32.yaml  lora_r64.yaml
configs/rlvr/: grpo_base.yaml  grpo_conservative.yaml
notebooks/: submission.ipynb
scripts/: evaluate.py  generate_synthetic.py  inference.py  prepare_data.py  train_rlvr.py  train_sft.py
src/: config.py
src/data/: categories.py  formatter.py  loader.py  synthetic.py
src/eval/: metrics.py  scoring.py
src/inference/: answer_extract.py  engine.py  majority_vote.py
src/train/: __init__.py  callbacks.py  model.py  rewards.py  rlvr.py  sft.py
tasks/: lessons.md  todo.md
